[gd_scene load_steps=6 format=3 uid="uid://dnx046gjbv1vx"]

[ext_resource type="Script" path="res://characters/enemies/enemy_assets/health_bar/health_bar.gd" id="1_p0ukv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jn0j4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vvn7"]
bg_color = Color(0.6, 0.105882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwaps"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjjwl"]
bg_color = Color(0.999624, 0.86138, 0.846178, 1)
shadow_offset = Vector2(0, 1)

[node name="HealthBar" type="ProgressBar"]
z_index = 2
offset_right = 1.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_jn0j4")
theme_override_styles/fill = SubResource("StyleBoxFlat_8vvn7")
value = 60.0
show_percentage = false
script = ExtResource("1_p0ukv")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qwaps")
theme_override_styles/fill = SubResource("StyleBoxFlat_gjjwl")
value = 70.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
